# gh-followers

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
cli/: Cargo.toml
cli/src/: config.rs  display.rs  main.rs
ghf/: Cargo.toml
ghf/src/: lib.rs  sources.rs
src/: config.rs  display.rs  lib.rs  main.rs  sources.rs  table.rs
web/: Cargo.toml
web/src/: main.rs
web/src/components/: body.rs  header.rs  index.rs  logo.rs  mod.rs  search.rs  source_code.rs  table_ghosts.rs
web/templates/: body.html  header.html  index.html  logo.html  search.html  search_box.html  source_code.html  table_ghosts.html
