[package]
name = "gh-followers"
version = "0.1.0"
edition = "2024"
authors = ["Sabu Siyad <hello@ssiyad.com>"]
license = "GPL-3.0"

[dependencies]
futures-util = "0.3.28"
colored = "3"

[dependencies.tokio]
version = "1.48.0"
features = ["full"]

[dependencies.octocrab]
version = "0.48.0"
features = ["stream"]
path = "../octocrab"

[dependencies.clap]
version = "4.5.53"
features = ["derive"]
