[workspace]
resolver = "3"
members = ["ghf", "cli", "web"]

# [dependencies]
# ghf = { workspace = true }
# futures-util = "0.3.28"
# colored = "3"
#
# [dependencies.tokio]
# version = "1.48.0"
# features = ["full"]
#
# [dependencies.octocrab]
# version = "0.48.0"
# features = ["stream"]
# path = "../octocrab"
#
# [dependencies.clap]
# version = "4.5.53"
# features = ["derive"]
