[package]
name = "ghf-cli"
version = "0.1.0"
edition = "2024"
authors = ["Sabu Siyad <hello@ssiyad.com>"]
license = "GPL-3.0"

[dependencies]
ghf = { path = "../ghf" }
colored = "3"

[dependencies.tokio]
version = "1.48.0"
features = ["full"]


[dependencies.clap]
version = "4.5.53"
features = ["derive"]
