[package]
name = "ghf-web"
version = "0.1.0"
edition = "2024"
authors = ["Sabu Siyad <hello@ssiyad.com>"]
license = "GPL-3.0"

[dependencies.ghf]
path = "../ghf"

[dependencies.tokio]
version = "1.48.0"
features = ["full"]

[dependencies.axum]
version = "0.8.7"

[dependencies.askama]
version = "0.14.0"

[dependencies.askama_web]
version = "0.14.0"
features = ["axum-0.8"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
